Correct h6 alignment property to 'text-align'
Fix typo in h6 alignment property.

--- a/style.css
+++ b/style.css
@@ -5,3 +5,7 @@ body{
     color: red;
     background-color: yellow;
 }
+
+h6{
+    test-align: left
+}
